<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VS lukasbi REST</string>
    <string name="action_settings">Settings</string>
    <string name="raw_request">Raw request</string>
	<string name="apache">Request using Apache HTTP</string>
	<string name="json_retrieve">Content negotiation: JSON</string>
	<string name="json_parse">Display JSON temperature</string>
	<string name="visualize">Visualize</string>
	<string name="result_title">Result:</string>
	<string name="init_result"></string>
	<string name="io_error">An IO error occured: </string>
	<string name="no_internet">You are not connected to the internet</string>
	<string name="invalid_response">Invalid response from server</string>
	<string name="temperature"></string>
	<string name="time">Measurements</string>
	<string name="collection_data">Collection data...this may take a few seconds</string>
	
	<color name="white">#FFFFFF</color>
</resources>
