<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_raw_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raw_request"
        android:onClick="rawRequest" />
    
    <Button
        android:id="@+id/btn_apache_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apache"
        android:onClick="apacheRequest" />
    
    <Button
        android:id="@+id/btn_json_retrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_retrieve"
        android:onClick="jsonRetrieve" />
    
    <Button
        android:id="@+id/btn_json_parse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_parse"
        android:onClick="jsonParse" />
    
    <Button
        android:id="@+id/btn_visualize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualize"
        android:onClick="visualize" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/result_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- 
    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/init_result"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:scrollbars="vertical"/>
     -->

    <ImageView
        android:id="@+id/img_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/blank" />

    <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">

        <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/init_result"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:scrollbars="vertical"/>

    </ScrollView>

</LinearLayout>
